--- a/src/index.css
+++ b/src/index.css
@@ -139,3 +139,11 @@ button:focus-visible {
 .noClick {
   pointer-events: none;
 }
+
+.displayNone {
+  display: none;
+}
+
+.visibilityNone {
+  visibility: hidden;
+}
