Add difficulty level buttons

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
 
 #root {
   display: grid;
-  grid-template-rows: 100px 100px auto;
+  grid-template-rows: 100px 100px 100px auto;
   height: 100vh;
   place-items: center;
 }
@@ -146,4 +146,9 @@ button:focus-visible {
 
 .visibilityNone {
   visibility: hidden;
+}
+
+.gameMode {
+  display: flex;
+  gap: 1rem;
 }
