--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
 
 #root {
   display: grid;
-  grid-template-rows: 100px 100px 100px auto;
+  grid-template-rows: 100px 65px 65px 65px auto;
   height: 100vh;
   place-items: center;
 }
@@ -103,7 +103,9 @@ button:focus-visible {
   flex-wrap: wrap;
   align-content: center;
   gap: 1rem;
+  width: 80vw;
   justify-content: center;
+  grid-row-start: 5;
 }
 
 .hidden {
@@ -151,4 +153,40 @@ button:focus-visible {
 .gameMode {
   display: flex;
   gap: 1rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  margin-top: 64px;
+  grid-column: 1;
+  grid-row: 3;
+}
+
+input {
+  font-size: 2rem;
+  padding: 8px;
+
+}
+
+.startButton {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2rem;
+  border: 4px solid green;
+  box-shadow: 0px 0px 4px 8px rgba(0,0,0, 0.3);
+}
+
+.currentPlayer {
+  box-shadow: 0px 0px 5px 2px white;
+  padding: 4px 16px;
+  border-radius: 8px;
+}
+
+.restartButton {
+  grid-row-start: 5;
+  font-size: 3rem;
 }
