--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,6 @@ button:focus-visible {
   flex-direction: column;
   justify-content: space-around;
   border-radius: 8px;
-
 }
 
 .gameboard {
@@ -179,6 +178,7 @@ input {
   font-size: 2rem;
   border: 4px solid green;
   box-shadow: 0px 0px 4px 8px rgba(0,0,0, 0.3);
+  z-index: 1000;
 }
 
 .currentPlayer {
