--- a/src/index.css
+++ b/src/index.css
@@ -151,11 +151,6 @@ button:focus-visible {
   visibility: hidden;
 }
 
-.gameMode {
-  display: flex;
-  gap: 1rem;
-}
-
 form {
   display: flex;
   flex-direction: column;
@@ -166,9 +161,36 @@ form {
 }
 
 input {
-  font-size: 2rem;
+  font-size: 1.8rem;
   padding: 8px;
 
+}
+/* Mode Difficulty form input styling */
+.modeButtonsContainer {
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+}
+
+.modeButtonsContainer > * {
+  font-size: 1.3rem;
+  padding: 2px 12px;
+  border: 1px solid white;
+  border-radius: 6px;
+}
+
+.modeButtonsContainer > *:hover {
+  background-color: rgba(255, 255, 255, 0.05);
+  cursor:pointer
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+input[type="radio"]:checked + .radio-indicator {
+  color: #3498db;
+  font-weight: 500;
 }
 
 .startButton {
