--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* TODO: CLEAN UP CSS CLASSNAMES AND ORGANISE INTO SECTIONS BASED ON COMPONENT,
+LAYOUT, ETC */
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -14,14 +16,17 @@
   -webkit-text-size-adjust: 100%;
 
   --spinner-size: 4rem;
-  --card-size: 200px;
   --grid-width: 220px;
   --grid-height: 220px;
+
+  --card-width: 165px;
+  --card-aspect-ratio: 1.4;
+  --border-color-hover: #646cff;
 }
 
 #root {
   display: grid;
-  grid-template-rows: 120px 65px 65px 30px auto;
+  grid-template-rows: 150px 65px 65px 30px auto;
   height: 100vh;
   place-items: center;
 }
@@ -58,16 +63,18 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 1.2rem;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
+  border-color: var(--border-color-hover)
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -87,8 +94,8 @@ button:focus-visible {
 }
 
 .card {
-  height: 200px;
-  width: 200px;
+  width: var(--card-width);
+  height: calc(var(--card-width) * var(--card-aspect-ratio));
   background-color: white;
   border: 4px solid #4caeff;
   display: flex;
@@ -106,7 +113,7 @@ button:focus-visible {
   justify-content: center;
   grid-row-start: 5;
   align-self: start;
-  max-width: 1000px;
+  max-width: 800px;
 }
 
 .hidden {
@@ -175,15 +182,18 @@ input {
 }
 
 .modeButtonsContainer > * {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   padding: 2px 12px;
   border: 1px solid white;
   border-radius: 6px;
+  transition: background-color 0.5s;
+  
 }
 
 .modeButtonsContainer > *:hover {
   background-color: rgba(255, 255, 255, 0.05);
-  cursor:pointer
+  border-color: #646cff;
+  cursor:pointer;
 }
 
 input[type="radio"] {
@@ -191,7 +201,7 @@ input[type="radio"] {
 }
 
 input[type="radio"]:checked + .radio-indicator {
-  color: #3498db;
+  color: #9ca1ff;
   font-weight: 500;
 }
 
@@ -214,7 +224,9 @@ input[type="radio"]:checked + .radio-indicator {
 
 .restartButton {
   grid-row-start: 5;
-  font-size: 3rem;
+  font-size: 2rem;
+  align-self: start;
+  margin-top: 4rem;
 }
 
 .playerContainer {
@@ -225,5 +237,9 @@ input[type="radio"]:checked + .radio-indicator {
 }
 
 .hardModeMaxWidth {
-  max-width: 1400px;
+  max-width: 1600px;
+}
+
+.playerGametime {
+  grid-row-start: 3;
 }
