--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ LAYOUT, ETC */
 #root {
   display: grid;
   grid-template-rows: 100px 65px 65px auto;
-  height: 100vh;
+  height: 100%;
   place-items: center;
 }
 
@@ -121,7 +121,7 @@ button:focus-visible {
   height: var(--spinner-size);
   width: var(--spinner-size);
   box-shadow: 0 0 6px white; 
-  animation: spin 0.6s linear infinite;
+  animation: spin 0.4s linear infinite;
 }
 
 .spinnerContainer {
