--- a/src/index.css
+++ b/src/index.css
@@ -29,11 +29,7 @@ LAYOUT, ETC */
 #root {
   margin: 0 auto;
   text-align: center;
-  
-  display: grid;
-  grid-template-rows: 100px 65px 65px auto;
-  height: 100%;
-  place-items: center;
+  height: 100vh;
 }
 
 * {
@@ -49,14 +45,22 @@ a:hover {
   color: #535bf2;
 }
 
+header {
+  font-size: 3.5rem;
+  margin: 30px 0px;
+}
+
+header, h1 {
+  line-height: 1.1;
+}
+
 h1 {
   font-size: 3.2em;
-  line-height: 1.1;
   margin: 0px;
 }
 
 h2 {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 body {
@@ -87,6 +91,19 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+/* SECTION: PAGE LAYOUT */
+.gameboardPage {
+  display: grid;
+  grid-template-rows: repeat(5,40px) auto;
+  place-items: center;
+}
+
+@media screen and (max-width: 600px) {
+  .gameboardPage {
+    grid-template-rows: 20px repeat(3,60px) auto; 
+  }
 }
 
 /* SECTION: CARD COMPONENT STYLING */
@@ -150,7 +167,7 @@ button:focus-visible {
   user-select: none;
 }
 
-/* LOADING SPINNER STYLING */
+/* SECTION: LOADING SPINNER STYLING */
 .loadingSpinner {
   border: 6px solid white;
   border-top: 6px solid rgb(177, 177, 255);
@@ -234,7 +251,7 @@ input[type="radio"]:checked + .radio-indicator {
   gap: 1.5rem;
   width: 80vw;
   justify-content: center;
-  grid-row-start: 5;
+  grid-row-start: 6;
   align-self: start;
   max-width: 700px;
   margin-bottom: 1rem;
@@ -257,6 +274,11 @@ input[type="radio"]:checked + .radio-indicator {
   border-radius: 8px;
 }
 
+.highScoreDisplay { 
+  grid-row-start: 4;
+  font-size: 0.9rem;
+}
+
 .restartButton {
   grid-row-start: 5;
   font-size: 2rem;
@@ -269,19 +291,35 @@ input[type="radio"]:checked + .radio-indicator {
   display: flex;
   align-items: center;
   gap: 4rem;
+  grid-row-start: 2;
 }
 
 .medModeMaxWidth {
   max-width: 1000px;
+  grid-row-start: 5;
 }
 
 .hardModeMaxWidth {
-  max-width: 1600px;
+  max-width: 90%;
+  grid-row-start: 5;
 }
 
 .playerGametime {
   grid-row-start: 3;
   font-size: 2rem;
+}
+
+@media screen and (max-width: 600px) {
+  .playerContainer {
+    flex-direction: column;
+    gap: 24px;
+    grid-row-start: 2;
+    align-self: start;
+  }
+
+  .currentPlayer, h2   {
+    margin: 4px 0px;
+  }
 }
 
 /* SECTION: UTIL CLASSES */
