--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-/* TODO: CLEAN UP CSS CLASSNAMES AND ORGANISE INTO GROUPS BASED ON COMPONENT,
-LAYOUT, ETC */
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -15,6 +13,8 @@ LAYOUT, ETC */
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
+  --border-color-hover: #646cff;
+  
   --spinner-size: 4rem;
 
   --card-width: 128px;
@@ -23,12 +23,10 @@ LAYOUT, ETC */
   --pokemon-img-width: var(--card-width);
   --card-flip-duration: 400ms;
   --card-text-scaling-factor: 0.8;
- 
-  --border-color-hover: #646cff;
 }
 
 #root {
-  margin: 0 auto;
+  margin: 0 10%;
   text-align: center;
   height: 100vh;
 }
@@ -51,8 +49,12 @@ h1 {
   margin: 0px;
 }
 
+h2 {
+  margin: 0px;
+}
+
 body {
-  margin: 0;
+  margin: 0px;
   min-width: 320px;
   min-height: 100vh;
   display: flex;
@@ -99,15 +101,10 @@ button:focus-visible {
 }
 
 .gameboardPage {
-  display: grid;
-  grid-template-rows: 50px repeat(5,40px) auto;
-  place-items: center;
-}
-
-@media screen and (max-width: 600px) {
-  .gameboardPage {
-    grid-template-rows: 30px repeat(3,60px) auto; 
-  }
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .gameOverPage {
@@ -125,8 +122,6 @@ form {
   flex-direction: column;
   gap: 32px;
   margin-top: 64px;
-  grid-column: 1;
-  grid-row: 3;
 }
 
 form > input,
@@ -173,17 +168,15 @@ label:hover {
 
 /* SECTION: GAMEBOARD PAGE STYING */
 .gameboard {
-  display: flex;
   position: relative;
+  display: flex;
   flex-wrap: wrap;
   align-content: center;
-  gap: 1.5rem;
-  width: 80vw;
   justify-content: center;
-  grid-row-start: 6;
-  align-self: start;
+  gap: 1.5rem;
   max-width: 700px;
-  margin-bottom: 1rem;
+  margin: 1rem 0px;
+  flex-grow: 1;
 }
 
 .startButton {
@@ -199,13 +192,13 @@ label:hover {
 
 .currentPlayer {
   box-shadow: 0px 0px 5px 2px white;
-  padding: 4px 16px;
+  padding: 2px 12px;
   border-radius: 8px;
 }
 
 .highScoreDisplay { 
-  grid-row-start: 4;
   font-size: 1.2rem;
+  margin: 1rem 0px;
 }
 
 @media screen and (max-width: 600px) {
@@ -299,9 +292,8 @@ label:hover {
 .spinnerContainer {
   display: grid;
   place-items: center;
-  height: 400px;
+  height: 100%;
   width: 100%;
-  grid-row-start: 5;
   align-self: start;
 }
 
@@ -319,25 +311,21 @@ label:hover {
   display: flex;
   align-items: center;
   gap: 4rem;
-  grid-row-start: 2;
+  margin: 2.5rem 0px 1rem;
 }
 
-.medModeMaxWidth {
+.medMode {
   max-width: 1000px;
-  grid-row-start: 5;
 }
 
-.hardModeMaxWidth {
-  max-width: 90%;
-  grid-row-start: 5;
+.hardMode {
+  max-width: 95%;
 }
 
 @media screen and (max-width: 600px) {
   .playerContainer {
     flex-direction: column;
     gap: 0.5rem;
-    grid-row-start: 2;
-    align-self: start;
   }
 
   .playerContainer h2 {
@@ -347,16 +335,11 @@ label:hover {
 
   .highScoreDisplay {
     font-size: 1rem;
-    align-self: start;
     margin-top: 0px;
   }
 
   .currentPlayer {
     margin: 4px 0px;
-  }
-
-  .hardModeMaxWidth {
-    max-width: 100%;
   }
 }
 
@@ -367,10 +350,6 @@ label:hover {
 }
 
 /* SECTION: UTIL CLASSES */
-.noClick {
-  pointer-events: none;
-}
-
 .displayNone {
   display: none;
 }
