Fix layout height responsiveness for mobile

--- a/src/index.css
+++ b/src/index.css
@@ -116,6 +116,13 @@ button:focus-visible {
   gap: 1rem;
 }
 
+@media screen and (max-width: 600px) {
+  .PlayersFormPage,
+  .gameboardPage {
+    height: fit-content;
+  }
+}
+
 /* SECTION: PLAYERS FORM PAGE STYLING */
 form {
   display: flex;
