--- a/src/index.css
+++ b/src/index.css
@@ -87,8 +87,7 @@ button:focus-visible {
 @media screen and (max-width: 600px) {
   #root {
     margin: 0px 5%;
-  }
-  
+  }  
 }
 
 /* SECTION: PAGE LAYOUT */
@@ -144,6 +143,7 @@ input {
 }
 
 .modeButtonsContainer {
+  width: 100%;
   display: flex;
   justify-content: center;
   gap: 1.5rem;
@@ -177,7 +177,18 @@ label:hover {
   .modeButton > input {
     visibility: hidden;
   }  
+
+  form {
+    width: 80%;
+  }
 }
+
+@media screen and (max-width: 390px) {
+  .modeButtonsContainer {
+    flex-direction: column;
+    gap: 1rem;
+  }
+} 
 
 /* SECTION: GAMEBOARD PAGE STYING */
 .gameboard {
@@ -305,7 +316,7 @@ label:hover {
 .spinnerContainer {
   display: grid;
   place-items: center;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   align-self: start;
 }
