--- a/src/index.css
+++ b/src/index.css
@@ -215,6 +215,7 @@ label:hover {
   border: 4px solid green;
   box-shadow: 0px 0px 4px 8px rgba(0,0,0, 0.3);
   z-index: 1000;
+  color: white;
 }
 
 .currentPlayer {
@@ -374,6 +375,7 @@ label:hover {
 .restartButton {
   font-size: 2rem;
   margin-top: 4rem;
+  color: white;
 }
 
 /* SECTION: UTIL CLASSES */
